# tbook

./: Cargo.toml  Makefile  README.md  debug_db.rs  package.json  tbook.db  tbook.toml  test_parser.rs
.github/workflows/: release-linux.yml
scripts/: install.sh
src/: app.rs  config.rs  deps.rs  main.rs
src/db/: mod.rs
src/parser/: epub.rs  mod.rs  pdf.rs
src/ui/: annotation.rs  dictionary.rs  explorer.rs  globalsearch.rs  help.rs  library.rs  mod.rs  path_input.rs  reader.rs  rsvp.rs  stats.rs  toc.rs  vocabulary.rs
