[package]
name = "tbook"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
crossterm = "0.29.0"
epub = "2.1.5"
html2text = "0.16.5"
ratatui = "0.30.0"
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_derive = "1.0.228"
tokio = { version = "1.49.0", features = ["full"] }
toml = "0.9.10"
