[package]
name = "tbook"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
crossterm = "0.29.0"
epub = "2.1.5"
html2text = "0.16.5"
ratatui = "0.30.0"
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_derive = "1.0.228"
tokio = { version = "1.49.0", features = ["full"] }
toml = "0.9.10"
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
serde_json = "1.0"
pdf-extract = "0.7"
unicode-segmentation = "1.12"
lopdf = "0.38.0"
pdf = "0.9.0"
walkdir = "2.5.0"
config = "0.15.19"
dirs = "6.0.0"
