[package]
name = "tbook"
version = "0.1.0"
edition = "2024"
description = "A premium Terminal E-book Reader with support for EPUB, PDF, and high-res images"
license = "MIT"
repository = "https://github.com/iredox/tbook"
homepage = "https://github.com/iredox/tbook"
readme = "README.md"
keywords = ["tui", "reader", "epub", "pdf", "terminal"]
categories = ["command-line-utilities", "parsing"]

[dependencies]
anyhow = "1.0.100"
crossterm = "0.29.0"
epub = "2.1.5"
html2text = "0.16.5"
ratatui = "0.30.0"
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_derive = "1.0.228"
tokio = { version = "1.49.0", features = ["full"] }
toml = "0.9.10"
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
serde_json = "1.0"
pdf-extract = "0.7"
unicode-segmentation = "1.12"
unicode-width = "0.2"
lopdf = "0.38.0"
pdf = "0.9.0"
image = "0.25"
ratatui-image = "1.0"
regex = "1.10"
scraper = "0.19"
walkdir = "2.5.0"

config = "0.15.19"
dirs = "6.0.0"
chrono = "0.4"
